# ChangeLog for dev-ruby/ruby-libart2
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-libart2/ChangeLog,v 1.40 2007/06/01 20:20:18 armin76 Exp $

  01 Jun 2007; Raúl Porcel <armin76@gentoo.org> ruby-libart2-0.16.0.ebuild:
  alpha stable wrt #169094

  17 Apr 2007; Christian Faulhammer <opfer@gentoo.org>
  ruby-libart2-0.16.0.ebuild:
  stable amd64, bug 169094

  17 Apr 2007; Christian Faulhammer <opfer@gentoo.org>
  ruby-libart2-0.15.0.ebuild:
  stable amd64, bug 169094

  28 Mar 2007; Raúl Porcel <armin76@gentoo.org> ruby-libart2-0.16.0.ebuild:
  ia64 stable wrt bug 169094

  08 Mar 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  ruby-libart2-0.16.0.ebuild:
  Stable on sparc wrt #169094

  04 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  ruby-libart2-0.16.0.ebuild:
  stable x86; bug 169094

  03 Mar 2007; nixnut <nixnut@gentoo.org> ruby-libart2-0.16.0.ebuild:
  Stable on ppc wrt bug 169064

*ruby-libart2-0.16.0 (30 Dec 2006)

  30 Dec 2006; Luis Medinas <metalgod@gentoo.org>
  -ruby-libart2-0.10.1.ebuild, -ruby-libart2-0.11.0.ebuild,
  -ruby-libart2-0.12.0.ebuild, +ruby-libart2-0.16.0.ebuild:
  Version Bump. Remove older versions.

  20 Oct 2006; Aron Griffis <agriffis@gentoo.org>
  ruby-libart2-0.14.1.ebuild:
  Mark 0.14.1 stable on alpha

*ruby-libart2-0.15.0 (30 Aug 2006)

  30 Aug 2006; Nguyễn Thái Ngọc Duy <pclouds@gentoo.org>
  +ruby-libart2-0.15.0.ebuild:
  Version bump

  08 Jun 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  ruby-libart2-0.14.1.ebuild:
  ppc stable

  29 Apr 2006; Simon Stelling <blubb@gentoo.org> ruby-libart2-0.14.1.ebuild:
  stable on amd64

  30 Mar 2006; Ferris McCormick <fmccor@gentoo.org>
  ruby-libart2-0.14.1.ebuild:
  Stable on sparc (version bump).

  28 Mar 2006; Aron Griffis <agriffis@gentoo.org>
  ruby-libart2-0.14.1.ebuild:
  Mark 0.14.1 stable on ia64

  24 Mar 2006; Caleb Tennis <caleb@gentoo.org> ruby-libart2-0.14.1.ebuild:
  x86 stable
